--- a/styles.css
+++ b/styles.css
@@ -106,3 +106,12 @@ footer{
     display: flex;
     justify-content: center;
 }
+
+
+.imagen{
+    padding-top: 10px;
+    height: 150px;
+    width: auto;
+    align-self: center;
+}
+
