--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body{
     font-family: 'M PLUS 1 Code', sans-serif;
 }
+
 .navbar{
     background-color: rgb(248, 234, 237);
 }
@@ -29,42 +30,9 @@ footer{
     flex-direction: row;
 }
 
-.div_listas{
-    display: flex;
-    
-}
-.lista_footer{
-    list-style: none;
-    font-size: smaller;
-}
-
-.lista_categorias{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.categoria_lista{
+.redes{
+    color: black;
     text-decoration: none;
-    color: black;
-    padding: 8px;
-}
-
-.lista_desplegable{
-    color: black;
-}
-
-.lista_desplegable:hover{
-    background-color: rgb(224, 224, 224);
-}
-
-.btn{
-    border: 0.5px solid rgb(209, 209, 209);
-}
-.btn:hover{
-    background-color: rgb(65, 95, 65);
-    color: white;
 }
 
 
@@ -77,30 +45,29 @@ footer{
 .descripcion{
     font-size: small;
 }
+.card_productos_carrito{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
 .card_productos{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;   
 }
 
 .card{
     font-family: 'PT Sans Narrow', sans-serif;
 }
-/* .icono_carrito{
-    margin-right: 15px;
-    border-color: pink;
-} */
 
-
-.div_carrito{
-    background-color: rgb(218, 189, 189);
-    font-size: small;
+.modal-body{
+    display: flex;
+    flex-direction: column;
 }
 
-.boton_borrar{
-    height: 50px;
-    font-size: small;
-}
+
 
 footer{
     display: flex;
@@ -117,8 +84,25 @@ footer{
 }
 
 .imagen_carrito{
-    height: 50px;
+    height: 150px;
     width: auto;
 }
 
 
+.boton_cantidad{
+    margin: 10px;
+}
+
+.boton_borrar{
+    font-size: smaller;
+    display: flex;
+    align-items: center;
+    
+}
+
+
+.informacion_producto{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
