--- a/styles.css
+++ b/styles.css
@@ -35,30 +35,13 @@ footer{
     text-decoration: none;
 }
 
-
 .precio{
     color: rgb(0, 0, 107);
     font-weight: 500;
     font-size: x-large;
 }
 
-.descripcion{
-    font-size: small;
-}
-.card_productos_carrito{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-}
-
-.card_productos{
-    display: flex;
-    flex-direction: column;
-    align-items: center;   
-}
-
-.card{
+.card_font{
     font-family: 'PT Sans Narrow', sans-serif;
 }
 
@@ -67,13 +50,10 @@ footer{
     flex-direction: column;
 }
 
-
-
 footer{
     display: flex;
     justify-content: center;
 }
-
 
 .imagen{
     padding-top: 10px;
@@ -88,21 +68,19 @@ footer{
     width: auto;
 }
 
-
-.boton_cantidad{
-    margin: 10px;
-}
-
-.boton_borrar{
-    font-size: smaller;
-    display: flex;
-    align-items: center;
-    
-}
-
-
 .informacion_producto{
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
+}
+
+.boton_carrito_producto:hover{
+    background-color: green;
+}
+
+.boton_borrar{
+    display: flex;
+    font-size: x-small;
+    width: 125px;
+    align-items: center;
 }
